--- a/style/style.scss
+++ b/style/style.scss
@@ -130,10 +130,10 @@ body {
     .welcome-section {
       align-items: center;
       display: flex;
-      height: 50vh;
-      @media screen and(max-width:900px) {
-        height: 300px;
-      }
+      height: 100vh;
+      // @media screen and(max-width:900px) {
+      //   height: 300px;
+      // }
     }
 
     .projects {
